# amplifier-hooks-notifications

./: README.md  pyproject.toml
amplifier_module_hooks_notifications/: __init__.py
