[project]
name = "amplifier-module-hooks-notifications"
version = "0.1.0"
description = "Shell notification hook for Amplifier events"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["amplifier-core>=0.1.0"]

[project.entry-points."amplifier.modules"]
hooks-notifications = "amplifier_module_hooks_notifications:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_notifications"]
